[package]
name = "diesel_async_ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.4"
diesel-async = { version = "0.2.2", features = [ "bb8", "postgres" ] }
futures-util = { version = "0.3.28", default_features = false }
rustls = "0.21.0"
thiserror = "1.0.40"
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.10.0"
tokio-rustls = "0.24.0"


[dev-dependencies]
tokio = { version = "1.27.0", features = [ "macros", "rt-multi-thread" ] }
