[package]
name = "diesel_async_ssl"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.4"
diesel-async = { version = "0.2.2", features = [ "postgres" ] }
rustls = "0.21.0"
thiserror = "1.0.40"
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.10.0"
tokio-rustls = "0.24.0"
tracing = "0.1.37"
tokio = { version = "1.27.0", features = [ "rt-multi-thread" ] }
rustls-pemfile = "1.0.2"
futures = "0.3.28"


[dev-dependencies]
tokio = { version = "1.27.0", features = [ "macros", "rt-multi-thread" ] }
diesel-async = { version = "0.2.2", features = [ "postgres", "bb8" ] }
anyhow = "1.0.70"
