[package]
name = "diesel_async_ssl"
version = "0.5.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2"
diesel-async = { version = "0.4", features = [ "postgres" ] }
rustls = "0.23"
rustls-pemfile = "2"
thiserror = "1"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
tracing = "0.1"
tokio = { version = "1", features = [ "rt-multi-thread" ] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
diesel-async = { version = "0.4", features = [ "postgres", "bb8" ] }
anyhow = "1"
